--- a/informacion_de_contacto.html
+++ b/informacion_de_contacto.html
@@ -36,6 +36,12 @@
 			</p>
 			<hr align="center" size="4" width="100%" noshade/> <!-- Línea de texto --> 
 
+			<b><li>Direcci&oacute;n p&aacute;gina Web Alterna</li></b>
+			<p>
+				<a href="https://raul-dutari.github.io/">https://raul-dutari.github.io/</a>
+			<p>
+			<hr align="center" size="4" width="100%" noshade/> <!-- Línea de texto --> 
+
 			<b><li>Direcci&oacute;n p&aacute;gina Web</li></b>
 			<p>
 				<a href="http://raul-enrique-dutari-dutari.unaux.com">http://raul-enrique-dutari-dutari.unaux.com</a>
