--- a/tesis_de_grado_asesoradas.html
+++ b/tesis_de_grado_asesoradas.html
@@ -6,56 +6,56 @@
 		<font face="Arial">
 		<font size="5">
 		<font color="white">
-		<hr align="center" size="4" width="100%" noshade/> <!-- Línea de texto --> 		
+		<hr align="center" size="4" width="100%" noshade/> <!-- Línea de texto -->
 		<h1 align="justify">Tesis de grado asesoradas</h1>
-		<hr align="center" size="4" width="100%" noshade/> <!-- Línea de texto --> 
+		<hr align="center" size="4" width="100%" noshade/> <!-- Línea de texto -->
 		<ol type="i">
 			<b><li>Maestr&iacute;a</li></b>
 			<ol type="1">
 				<li><b>2022. BATISTA MENDOZA, Gloris Mitzel.</b> <i><u>Percepci&oacute;n de la estrategia de ense&ntilde;anza mediante el uso del simulador de red en las competencias t&eacute;cnicas de los alumnos del curso de Teleinform&aacute;tica de la carrera de Ingenier&iacute;a en Inform&aacute;tica de la Facultad de Inform&aacute;tica, Electr&oacute;nica y Comunicaci&oacute;n de la Universidad de Panam&aacute;, 2021.</i></u> Proyecto final de maestr&iacute;a presentado como requisito para optar por el T&iacute;tulo de Magister en Entornos Virtuales de Aprendizaje, Universidad Tecnol&oacute;gica OTEIMA, Sede de Veraguas, Rep&uacute;blica de Panam&aacute;.</li>
 
 				<li><b>2009. RODR&Iacute;GUEZ QUIEL, Carmen O.</b> <i><u>Propuesta metodol&oacute;gica para el estudio de la factorizaci&oacute;n a trav&eacute;s del recurso did&aacute;ctico alternativo: P&aacute;gina Web.</i></u> Trabajo final para optar por el t&iacute;tulo de maestr&iacute;a en dificultades en el aprendizaje de la matem&aacute;tica, Universidad Especializada de las Am&eacute;ricas, Sede de Veraguas, Rep&uacute;blica de Panam&aacute; (
-				<a href="_archivos_pdf/tesis_de_grado_asesoradas/maestria_2009_carmen_rodriguez/anteproyecto.pdf">Anteproyecto</a>, 
-				<a href="_archivos_pdf/tesis_de_grado_asesoradas/maestria_2009_carmen_rodriguez/defensa_anteproyecto.pdf">Defensa del anteproyecto</a>, 
-				<a href="_archivos_pdf/tesis_de_grado_asesoradas/maestria_2009_carmen_rodriguez/proyecto.pdf">Proyecto</a>, 
-				<a href="_archivos_pdf/tesis_de_grado_asesoradas/maestria_2009_carmen_rodriguez/sustentacion.pdf">Sustentaci&oacute;n</a>).</li>
+				<https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/tesis_de_grado_asesoradas/maestria_2009_carmen_rodriguez/anteproyecto.pdf">Anteproyecto</a>,
+				<https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/tesis_de_grado_asesoradas/maestria_2009_carmen_rodriguez/defensa_anteproyecto.pdf">Defensa del anteproyecto</a>,
+				<https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/tesis_de_grado_asesoradas/maestria_2009_carmen_rodriguez/proyecto.pdf">Proyecto</a>,
+				<https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/tesis_de_grado_asesoradas/maestria_2009_carmen_rodriguez/sustentacion.pdf">Sustentaci&oacute;n</a>).</li>
 			</ol>
-			<hr align="center" size="4" width="100%" noshade/> <!-- Línea de texto --> 
+			<hr align="center" size="4" width="100%" noshade/> <!-- Línea de texto -->
 			<b><li>Licenciatura</li></b>
 			<ol type="1">
 				<li><b>2019. &Aacute;BREGO, Heydi y QUIEL, Vannesa.</b> <i><u>Establecimiento de criterios para la compra de computadoras en funci&oacute;n al rendimiento-costo.</i></u> Trabajo de graduaci&oacute;n para optar por el t&iacute;tulo de licenciatura en inform&aacute;tica para la gesti&oacute;n educativa y empresarial, Universidad de Panam&aacute;, Centro Regional Universitario de Veraguas, Rep&uacute;blica de Panam&aacute; (
-				<a href="_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2019_heydi_abrego_vanessa_quiel/anteproyecto.pdf">Anteproyecto</a>, 
-				<a href="_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2019_heydi_abrego_vanessa_quiel/proyecto.pdf">Proyecto</a>, 
-				<a href="_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2019_heydi_abrego_vanessa_quiel/sustentacion.pdf">Sustentaci&oacute;n</a>).</li>
+				<https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2019_heydi_abrego_vanessa_quiel/anteproyecto.pdf">Anteproyecto</a>,
+				<https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2019_heydi_abrego_vanessa_quiel/proyecto.pdf">Proyecto</a>,
+				<https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2019_heydi_abrego_vanessa_quiel/sustentacion.pdf">Sustentaci&oacute;n</a>).</li>
 
 				<li><b>2018. ZAMBRANO, Adriano.</b> <i><u>An&aacute;lisis de los factores l&oacute;gicos que inciden significativamente en el rendimiento de la red LAN en la FIEC-CRUV.</i></u> Trabajo de graduaci&oacute;n para optar por el t&iacute;tulo de licenciatura en ingenier&iacute;a en inform&aacute;tica, Universidad de Panam&aacute;, Centro Regional Universitario de Veraguas, Rep&uacute;blica de Panam&aacute; (
-				<a href="_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2018_adriano_zambrano/anteproyecto.pdf">Anteproyecto</a>, 
-				<a href="_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2018_adriano_zambrano/proyecto.pdf">Proyecto</a>, 
-				<a href="_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2018_adriano_zambrano/sustentacion.pdf">Sustentaci&oacute;n</a>).</li>
+				<https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2018_adriano_zambrano/anteproyecto.pdf">Anteproyecto</a>,
+				<https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2018_adriano_zambrano/proyecto.pdf">Proyecto</a>,
+				<https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2018_adriano_zambrano/sustentacion.pdf">Sustentaci&oacute;n</a>).</li>
 
 				<li><b>2012. URIETA C., Itzel V.</b> <i><u>Estudio de necesidades y gu&iacute;a para el uso de Wi-Fi basado en est&aacute;ndares IEEE 802.11X.</i></u> Trabajo de graduaci&oacute;n para optar por el t&iacute;tulo de licenciatura en ingenier&iacute;a en inform&aacute;tica, Universidad de Panam&aacute;, Centro Regional Universitario de Veraguas, Rep&uacute;blica de Panam&aacute; (
-				<a href="_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2012_itzel_urieta/anteproyecto.pdf">Anteproyecto</a>, 
-				<a href="_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2012_itzel_urieta/proyecto.pdf">Proyecto</a>, 
-				<a href="_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2012_itzel_urieta/sustentacion.pdf">Sustentaci&oacute;n</a>).</li>
+				<https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2012_itzel_urieta/anteproyecto.pdf">Anteproyecto</a>,
+				<https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2012_itzel_urieta/proyecto.pdf">Proyecto</a>,
+				<https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2012_itzel_urieta/sustentacion.pdf">Sustentaci&oacute;n</a>).</li>
 
 				<li><b>2011. L&Oacute;PEZ P., Rosa Y.</b> <i><u>Estudio de factibilidad de creaci&oacute;n de una red inal&aacute;mbrica WIFI para el edificio A-B del Centro Regional Universitario de Veraguas.</i></u> Trabajo de graduaci&oacute;n para optar por el t&iacute;tulo de licenciatura en ingenier&iacute;a en inform&aacute;tica, Universidad de Panam&aacute;, Centro Regional Universitario de Veraguas, Rep&uacute;blica de Panam&aacute; (
-				<a href="_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2011_rosa_lopez/anteproyecto.pdf">Anteproyecto</a>, 
-				<a href="_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2011_rosa_lopez/proyecto.pdf">Proyecto</a>, 
-				<a href="_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2011_rosa_lopez/sustentacion.pdf">Sustentaci&oacute;n</a>).</li>
+				<https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2011_rosa_lopez/anteproyecto.pdf">Anteproyecto</a>,
+				<https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2011_rosa_lopez/proyecto.pdf">Proyecto</a>,
+				<https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2011_rosa_lopez/sustentacion.pdf">Sustentaci&oacute;n</a>).</li>
 
 				<li><b>2011.  &Aacute;LVAREZ, F&aacute;tima del R. y SANTILLANA, Fabricio A.</b> <i><u>Propuesta para la implementaci&oacute;n de pol&iacute;ticas de ahorro energ&eacute;tico de equipos inform&aacute;ticos, en empresas de Santiago de Veraguas.</i></u> Trabajo de graduaci&oacute;n para optar por el t&iacute;tulo de licenciatura en ingenier&iacute;a en inform&aacute;tica, Universidad de Panam&aacute;, Centro Regional Universitario de Veraguas, Rep&uacute;blica de Panam&aacute; (
-				<a href="_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2011_fatima_fabricio/anteproyecto.pdf">Anteproyecto</a>, 
-				<a href="_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2011_fatima_fabricio/proyecto.pdf">Proyecto</a>, 
-				<a href="_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2011_fatima_fabricio/sustentacion.pdf">Sustentaci&oacute;n</a>).</li>
+				<https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2011_fatima_fabricio/anteproyecto.pdf">Anteproyecto</a>,
+				<https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2011_fatima_fabricio/proyecto.pdf">Proyecto</a>,
+				<https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/tesis_de_grado_asesoradas/licenciatura_2011_fatima_fabricio/sustentacion.pdf">Sustentaci&oacute;n</a>).</li>
 			</ol>
-			<hr align="center" size="4" width="100%" noshade/> <!-- Línea de texto --> 
+			<hr align="center" size="4" width="100%" noshade/> <!-- Línea de texto -->
 
 			<b><li>Preparando proyecto de tesis</li></b>
 			<ol type="1">
 				<li>A la fecha, no se dispone de estudiantes en esta fase.</li>
 			</ol>
 
-			<hr align="center" size="4" width="100%" noshade/> <!-- Línea de texto --> 
+			<hr align="center" size="4" width="100%" noshade/> <!-- Línea de texto -->
 			<b><li>Preparando anteproyecto de tesis</li></b>
 			<ol type="1">
 				<li><b>2022. PINEDA GONZ&Aacute;LEZ, Jes&uacute;s Jamil.</b> <i><u>Establecimiento de pol&iacute;ticas de control de malware orientadas a los estudiantes de la FIEC-CRUV.</i></u> Anteproyecto de trabajo de graduaci&oacute;n para optar por el t&iacute;tulo de licenciatura en inform&aacute;tica para la gesti&oacute;n educativa y empresarial, Universidad de Panam&aacute;, Centro Regional Universitario de Veraguas, Rep&uacute;blica de Panam&aacute;.</li>
@@ -81,6 +81,6 @@
 				<li><b>2021. CARPINTERO CARPINTERO, Alicia.</b> <i><u>Sistema de prevenci&oacute;n de alergias alimentarias en restaurantes basado en tecnolog&iacute;as inal&aacute;mbricas.</i></u> Anteproyecto de trabajo de graduaci&oacute;n para optar por el t&iacute;tulo de licenciatura en ingenier&iacute;a en inform&aacute;tica, Universidad de Panam&aacute;, Centro Regional Universitario de Veraguas, Rep&uacute;blica de Panam&aacute;.</li>
 			</ol>
 		</ol>
-	<hr align="center" size="4" width="100%" noshade/> <!-- Línea de texto --> 		
+	<hr align="center" size="4" width="100%" noshade/> <!-- Línea de texto -->
 	</body>
 </html>
