--- a/informacion_de_contacto.html
+++ b/informacion_de_contacto.html
@@ -42,6 +42,12 @@
 			<p>
 			<hr align="center" size="4" width="100%" noshade/> <!-- Línea de texto --> 
 
+			<b><li>Direcci&oacute;n p&aacute;gina Web Alterna</li></b>
+			<p>
+				<a href="https://raul-dutari.github.io/">https://raul-dutari.github.io/</a>
+			<p>
+			<hr align="center" size="4" width="100%" noshade/> <!-- Línea de texto --> 
+
 			<b><li>Tel&eacute;fono de oficina</li></b>
 			<p>
 				00 (507) 958-7623, Extensi&oacute;n 221 (Coordinaci&oacute;n de la FIEC-CRUV)
