--- a/tabla_de_contenidos.html
+++ b/tabla_de_contenidos.html
@@ -19,9 +19,9 @@
 		<br/>
 		<a href="ejecutorias_academicas.html" target="contenido">5. Ejecutorias Acad&eacute;micas</a>
 		<br/>
-		<a href="tesis_de_grado_asesoradas.html" target="contenido">6. Tesis de grado asesoradas</a>
+		<a href="tesis_asesoradas.html" target="contenido">6. Tesis asesoradas</a>
 		<br/>
-		<a href="https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/tesis_de_grado_asesoradas/temas_para_tesis.pdf" target="contenido">7. Temas propuestos para tesis de grado</a>
+		<a href="https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/tesis_asesoradas/temas_para_tesis.pdf" target="contenido">7. Temas propuestos para tesis</a>
 		<br/>
 		<a href="asignaturas_dictadas.html" target="contenido">8. Asignaturas Dictadas</a>
 		<br/>
