--- a/tesis_asesoradas.html
+++ b/tesis_asesoradas.html
@@ -58,6 +58,8 @@
 			<hr align="center" size="4" width="100%" noshade/> <!-- Línea de texto --> 
 			<b><li>Preparando anteproyecto de tesis</li></b>
 			<ol type="1">
+				<li><b>2022. PINEDA GONZ&Aacute;LEZ, Jes&uacute;s Jamil.</b> <i><u>Establecimiento de pol&iacute;ticas de control de malware orientadas a los estudiantes de la FIEC-CRUV.</i></u> Anteproyecto de trabajo de graduaci&oacute;n para optar por el t&iacute;tulo de licenciatura en inform&aacute;tica para la gesti&oacute;n educativa y empresarial, Universidad de Panam&aacute;, Centro Regional Universitario de Veraguas, Rep&uacute;blica de Panam&aacute;.</li>
+
 				<li><b>2022. GONZ&Aacute;LEZ GONZ&Aacute;LEZ, Idania del Carmen.</b> <i><u>Estado del arte del software libre en las instituciones privadas del distrito de Calobre.</i></u> Anteproyecto de trabajo de graduaci&oacute;n para optar por el t&iacute;tulo de licenciatura en inform&aacute;tica para la gesti&oacute;n educativa y empresarial, Universidad de Panam&aacute;, Centro Regional Universitario de Veraguas, Rep&uacute;blica de Panam&aacute;.</li>
 
 				<li><b>2022. ALVARADO VALD&Eacute;S, Steven Khalil.</b> <i><u>An&aacute;lisis del rendimiento de los sistemas computacionales de los estudiantes de la Facultad de Arquitectura del CRUV.</i></u> Anteproyecto de trabajo de graduaci&oacute;n para optar por el t&iacute;tulo de licenciatura en ingenier&iacute;a en inform&aacute;tica, Universidad de Panam&aacute;, Centro Regional Universitario de Veraguas, Rep&uacute;blica de Panam&aacute;.</li>
