--- a/asignaturas_dictadas.html
+++ b/asignaturas_dictadas.html
@@ -10,7 +10,14 @@
 		<h1 align="justify">Asignaturas dictadas en la Universidad de Panam&aacute;</h1>
 		<hr align="center" size="4" width="100%" noshade/> <!-- Línea de texto --> 
 		<ol type="i">
-			<b><li>Primer Semestre - 2023</li></b>
+			<b><li>Verano - 2024</li></b>
+			<ol type="1">
+				<li>Curso Proped&eacute;utico FIEC-CRUV. Tema 1: N&uacute;meros reales: ejemplos y operaciones b&aacute;sicas (<a href="https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/propedeutico/material_de_estudiantes.pdf">Material de estudiantes</a>, 
+				<a href="https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/propedeutico/practica_de_estudiantes.pdf">Pr&aacute;ctica de estudiantes</a>, 
+				<a href="https://github.com/raul-dutari/raul-dutari.github.io/raw/main/_archivos_pdf/propedeutico/presentacion_para_estudiantes.pdf">Presentaci&oacute;n para estudiantes</a>).</li>
+			</ol>
+
+			<b><li>Primer Semestre - 2024</li></b>
 			<ol type="1">
 				<li>Inteligencia Artificial, Inf 513.</li>
 
@@ -22,7 +29,7 @@
 			</ol>
 
 			<hr align="center" size="4" width="100%" noshade/> <!-- Línea de texto --> 
-			<b><li>Segundo Semestre - 2022</li></b>
+			<b><li>Segundo Semestre - 2023</li></b>
 			<ol type="1">
 				<li>Fundamentos de los Computadores, Inf 225.</li>
 
